Small styling changes: - title font weight - removed badge style from topics - added border to search box - added background to advanced search options
Bigger changes:
- removed big footer
- removed social bar from footer
- added `GeoCat Live` to footer
- added new search results list style

--- a/less/gn_editor_minimal.less
+++ b/less/gn_editor_minimal.less
@@ -122,7 +122,7 @@
     // styling on row hover
     .field-bg {
       background: transparent;
-      color: 
+      // color: 
     }
     .gn-required > label:after {
       font-size: 1.8em;
