--- a/less/gn_results_minimal.less
+++ b/less/gn_results_minimal.less
@@ -131,6 +131,7 @@ ul.gn-resultview {
   margin-right: -15px;
   margin-bottom: 0;
   border-top: 1px solid #ddd;
+  padding-top: 15px;
   .metadata {
     position: absolute;
     top: 0;
@@ -186,17 +187,6 @@ ul.gn-resultview {
       background-color: #fff;
     }
   }
-  li.gn-list {
-    h4 {
-      a {
-        font-size: 16px;
-        line-height: 1.4;
-      }
-    }
-    p {
-      font-size: 1em;
-    }
-  }
 
   li.gn-grid {
     @grid-bottom-margin: 2px;
@@ -228,7 +218,8 @@ ul.gn-resultview {
       h3 {
         margin-top: 0px;
         a {
-          font-weight: normal;
+          font-weight: 100;
+          line-height: 1.3;
           font-size: 80%;
           color: #333333;
           max-height: 82px;
@@ -269,8 +260,8 @@ ul.gn-resultview {
     }
     .gn-md-footer {
       .clearfix();
-      margin-top: 15px;
-      border-top: 1px solid #ddd;
+      margin-top: 5px;
+      border-bottom: 1px solid #ddd;
       .gn-md-rating {
         float: left;
         margin-top: 10px;
@@ -309,6 +300,37 @@ ul.gn-resultview {
       margin-left: 18px;
     }
 
+  }
+  li.gn-grid.gn-list {
+    width: 100%;
+    max-width: none;
+    height: auto;
+    .gn-md-title {
+      min-height: 0;
+    }
+    h3 {
+      a {
+        font-weight: 100;
+        font-size: 90%;
+      }      
+    }
+    h4 {
+      a {
+        font-size: 16px;
+        line-height: 1.4;
+      }
+    }
+    p {
+      font-size: 1em;
+      line-height: 1.4;
+    }
+  }
+  li.gn-grid.gn-list.gn-list-nothumbnail {
+    .gn-md-abstract {
+      max-height: 12em;
+      overflow: auto;
+      .scrollbar();
+    }
   }
 }
 
