--- a/less/gn_variables_minimal.less
+++ b/less/gn_variables_minimal.less
@@ -39,7 +39,9 @@
 // home page
 // 
 // ----- topics block
-@gn-topics-background-color: #d6d6d6; // @well-bg;
+@gn-topics-background-color: #fbfbfb; // @well-bg;
+@gn-topics-color: #333;
+@gn-topics-color-hover: #000;
 // ----- info block
 @gn-info-background-color: #f1f1f1; // @body-bg;
 // ----- resultcards
