--- a/templates/searchForm.html
+++ b/templates/searchForm.html
@@ -42,7 +42,7 @@
           
         </div>
       </div>
-      <div class="row">
+      <div class="row gn-form-advanced">
         <!--Advanced search form-->
         <div data-ng-show="searchObj.advancedMode"
              class="gn-search-filter col-lg-12">
