--- a/less/gn_result_minimal.less
+++ b/less/gn_result_minimal.less
@@ -36,8 +36,10 @@
   .gn-metadata-display {
     .gn-record {
       h1 {
-        i:empty {
-          // display: block;
+        font-size: 24px;
+        font-weight: 100;
+        i {
+          margin-right: 5px;
         }
       }
     }
