--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,19 +1,15 @@
 <!-- footer -->
-<div class="gn-row-footer hidden-xs">
+<!-- <div class="gn-row-footer hidden-xs">
   <div data-ng-class="fluidLayout ? 'container-fluid' : 'container'">
     <div class="row">
       <div class="col-sm-12">
         <div class="row">
-          <!-- block 1 -->
           <div class="col-sm-6 gn-nopadding-left">
             <h4 class="clearfix">
               <span>{{info['system/site/name']}}</span>
             </h4>
             <p data-translate="">geonetworkDescription</p>
           </div>
-          <!-- /block 1 -->
-
-          <!-- block 2 -->
           <div class="col-sm-3">
             <h4>Sitemap</h4>
             <ul>
@@ -43,9 +39,6 @@
               </li>
             </ul>
           </div>
-          <!-- /block 2 -->
-
-          <!-- block 3 -->
           <div class="col-sm-3">
             <h4>Links</h4>
             <ul>
@@ -57,12 +50,11 @@
               </li>
             </ul>
           </div>
-          <!-- /block 3 -->
         </div>
       </div>
     </div>
   </div>
-</div>
+</div> -->
 <!-- /.gn-row-footer -->
 <div data-ng-class="fluidLayout ? 'container-fluid' : 'container'">
   <div class="row">
@@ -70,50 +62,12 @@
 
       <div class="row">
         <!-- block 1 -->
-        <div class="col-sm-6 gn-nopadding-left">
+        <div class="col-sm-12 gn-nopadding-left">
           <ul class="nav navbar-nav">
             <li class="gn-footer-text">
               <span data-translate=""
-                    data-translate-values="{platform: '{{info['system/platform/name']}}', version: '{{info['system/platform/version']}}', subversion: '{{info['system/platform/subVersion']}}'}">
+                    data-translate-values="{platform: 'GeoCat Live'}">
                 versionDetails</span>
-            </li>
-          </ul>
-        </div>
-
-        <!-- block 2 -->
-        <div class="col-sm-6 gn-nopadding-left gn-nopadding-right">
-          <ul class="nav navbar-nav">
-            <li class="gn-footer-text" ng-hide="showSocialMediaLink">
-              <span data-translate="">shareOn</span>
-            </li>
-            <li class="socialmedia" ng-hide="showSocialMediaLink">
-              <a href="https://twitter.com/share?url={{socialMediaLink | encodeURIComponent}}"
-                 target="_blank" title="{{'shareOnTwitter' | translate}}"><i class="fa fa-twitter"></i>
-              </a>
-              <a href="https://plus.google.com/share?url={{socialMediaLink | encodeURIComponent}}"
-                 target="_blank" title="{{'shareOnGooglePlus' | translate}}"><i class="fa fa-google-plus"></i>
-              </a>
-              <a href="https://www.facebook.com/sharer.php?u={{socialMediaLink | encodeURIComponent}}"
-                 target="_blank" title="{{'shareOnFacebook' | translate}}"><i class="fa fa-facebook"></i>
-              </a>
-              <a
-                href="http://www.linkedin.com/shareArticle?mini=true&amp;url={{socialMediaLink | encodeURIComponent}}"
-                target="_blank" title="{{'shareOnLinkedIn' | translate}}"><i class="fa fa-linkedin"></i>
-              </a>
-              <a href="mailto:?subject={{info.site.name}}&amp;body={{socialMediaLink | encodeURIComponent}}"
-                 target="_blank" title="{{'shareByEmail' | translate}}"><i class="fa fa-envelope-o"></i>
-              </a>
-              <a
-                href=""
-                data-ng-click="getPermalink('', socialMediaLink)"
-                title="{{'permalink' | translate}}"><i class="fa fa-fw fa-link"></i></a>
-            </li>
-            <li class="socialmedia">
-              <a href="rss.search?sortBy=changeDate&georss=simplepoint"
-                 title="{{'lastRecords' | translate}}"
-                 class="gn-nopadding-left">
-                <i class="fa fa-rss"/>
-              </a>
             </li>
           </ul>
         </div>
