--- a/templates/list_nothumbnail.html
+++ b/templates/list_nothumbnail.html
@@ -1,5 +1,5 @@
 <ul class="list-group gn-resultview gn-resultview-sumup clearfix">
-  <li class="list-group-item gn-grid gn-list"
+  <li class="list-group-item gn-grid gn-list gn-list-nothumbnail"
       data-ng-repeat="md in searchResults.records"
       data-gn-fix-mdlinks=""
       data-gn-displayextent-onhover=""
@@ -26,8 +26,6 @@
       <h3>
         <a data-ng-href="#/metadata/{{md.getUuid()}}"
            title="{{md.title || md.defaultTitle}}">
-
-          <!-- <i class="fa gn-icon-{{md.type[0]}}" title="{{md.type[0] | translate}}"/> -->
           {{(md.title || md.defaultTitle) | characters:80}}</a>
       </h3>
     </div>
@@ -36,15 +34,7 @@
     <div title="{{(md.abstract || md.defaultAbstract) | striptags}}"
          data-ng-click="openRecord($index, md, searchResults.records)"
          class="clearfix">
-      <!-- Thumbnail -->
-      <div class="gn-md-thumbnail"
-            data-ng-class="{'gn-md-no-thumbnail': !md.getThumbnails().list[0].url}">
-        <img class="gn-img-thumbnail"
-             data-ng-src="{{md.getThumbnails().list[0].url}}"
-             data-ng-if="md.getThumbnails().list[0].url"/>
-
-      </div>
-      <div class="gn-md-abstract ellipsis">
+      <div class="gn-md-abstract">
         <div>
           <p>{{(md.abstract || md.defaultAbstract) | striptags}}</p>
         </div>
