--- a/templates/footer.html
+++ b/templates/footer.html
@@ -66,7 +66,7 @@
           <ul class="nav navbar-nav">
             <li class="gn-footer-text">
               <span data-translate=""
-                    data-translate-values="{platform: 'GeoCat Live'}">
+                    data-translate-values="{platform: 'GeoNetwork Enterprise'}">
                 versionDetails</span>
             </li>
           </ul>
