--- a/directives/partials/periodchooser.html
+++ b/directives/partials/periodchooser.html
@@ -17,8 +17,10 @@
       <div class="input-group date" data-date=""
            data-date-format="yyyy-mm-dd"
            data-gn-bootstrap-datepicker="dateFrom">
-        <input class="form-control" type="text"
-               placeholder="{{'from' | translate}}"/>
+        <input class="form-control"
+               type="text"
+               placeholder="{{'from' | translate}}"
+               aria-label="{{'from' | translate}}"/>
       <span class="input-group-addon"><i
         class="fa fa-calendar"></i></span>
       </div>
@@ -27,8 +29,10 @@
       <div class="input-group date" data-date=""
            data-date-format="yyyy-mm-dd"
            data-gn-bootstrap-datepicker="dateTo">
-        <input class="form-control" type="text"
-               placeholder="{{'to' | translate}}"/>
+        <input class="form-control"
+               type="text"
+               placeholder="{{'to' | translate}}"
+               aria-label="{{'to' | translate}}"/>
         <span class="input-group-addon"><i
           class="fa fa-calendar"></i></span>
       </div>
