--- a/less/gn_editor_minimal.less
+++ b/less/gn_editor_minimal.less
@@ -1,6 +1,8 @@
 @import "gn_search_minimal.less";
 @import "../../../style/gn_editor.less";
 @import "gn_view_minimal.less";
+// import default editor styles
+@import "../../default/less/gn_editor_default.less";
 
 // text in the top bar
 .navbar-text {
