--- a/less/gn_map_minimal.less
+++ b/less/gn_map_minimal.less
@@ -1,207 +1,7 @@
 @import "../../../style/gn_search.less";
+// import default map styles
+@import "../../default/less/gn_map_default.less";
 
-[data-gn-map-field] > [ngeo-map] {
-  background-color: #fff;
-  border: 1px solid #ddd;
-  right: 0;
-  bottom: 0;
-  position: fixed !important;
-  z-index: 99;
-  margin: 5px;
-  width: 250px !important;
-  height: 250px !important;
-  .ol-attribution {
-    right: auto;
-    left: .5em;
-  }
-  .ol-attribution button {
-    float: left;
-  }
-  .gn-draw-btn {
-    top: 0;
-    left: 0;
-    .btn-default {
-      border-bottom: 0;
-      border-top: 0;
-      border: 0;
-      border-radius: 0;
-    }
-  }
-  .btn-group-vertical {
-    right: 0;
-    top: 0;
-    .btn-default {
-      border: 0;
-      border-radius: 0;
-    }
-  }
-}
-
-// map viewer
-[gn-main-viewer] {
-  position: absolute;
-  top: 0px;
-  bottom: 0px;
-  left: 0px;
-  right: 0px;
-  // display the map over the big footer
-  height: calc(~"100vh - @{gn-menubar-min-height} - @{gn-footer-menubar-min-height}");
-  z-index: 10;
-  .ol-attribution {
-    right: auto;
-    left: .5em;
-  }
-  .ol-attribution button {
-    float: left;
-  }
-
-  .panel-tools {
-    z-index: 100;
-    background: #fff;
-    border: none;
-    border-radius: 0;
-    .panel-heading {
-      border-radius: 0;
-      background-color: #317cbd;
-      height: 3.4em;
-      color: #fff;
-      .clearfix();
-      h3 {
-        font-size: 15px;
-        font-weight: 300;
-      }
-    }
-    .panel-body {
-      border-radius: 0;
-    }
-    .processes-list .list-group-item {
-      &.active {
-        background-color: @btn-primary-bg;
-        * { color: @btn-primary-color; }
-      }
-    }
-    .close {
-      text-shadow: none;
-      color: #ccc;
-      opacity: 1;
-      margin-top: -.2em;
-      &:hover {
-        background: 0;
-      }
-    }
-    [gn-layermanager] .list-group-item.gn-searchlayer, .list-group-item.gn-searchlayer {
-      .list-group-item {
-        padding: 10px 0;
-        border-left: 0;
-        border-right: 0;
-      } 
-      th {
-        font-weight: 400;
-        line-height: 1;
-      }
-      ul {
-        padding-left: 14px;
-        list-style: disc;
-        li {
-          padding: 4px 0;
-        }
-      }
-    }
-  }
-  .tools, .search-container {
-    button, [role="button"] {
-      margin-bottom: .2em;
-      border: none;
-      border-radius: 0;
-      background: #e5e5e5;
-      width: 2.8em;
-      transition: background .3s ease;
-    }
-    button.active {
-      background-color: #464646;
-    }
-    button:focus [role=tooltip],
-    button:hover [role=tooltip] {
-      clip: auto;
-      right: 3.5em;
-      background: #5cb85c;
-      color: #fff;
-      padding: 8px 12px;
-      margin-top: -6px;
-      font-size: 12px;
-      border-radius: 0;
-      text-shadow: none;
-      z-index: 9000;
-    }
-  }
-  .search-container {
-    button {
-      border: 1px solid #ccc;
-      margin-bottom: 0;
-    }
-    button:focus [role=tooltip],
-    button:hover [role=tooltip] {
-      right: auto;
-      margin-left: 1.5em;
-      margin-top: -7px;
-      padding-top: 9px;
-    }
-  }
-  .nav-tabs {
-    > li {
-      cursor: pointer;
-    }
-  }
-  .nav {
-    > li {
-      > a {
-        padding: 10px 10px;
-      }
-    }
-  }
-  [ngeo-map] {
-    height: 100%;
-    background: #fff;
-  }
-}
-
-// minimap on search results
-.gn-toggle {
-  background-color: #333;
-  color: white !important;
-  border-radius: 2px;
-  border-width: 0px;
-  &:hover, &:active, &:focus {
-    background-color: #000;
-    color: white !important;
-  }
-}
-.gn-minimap-button {
-  position: fixed;
-  padding: 7px;
-  right: 0px;
-  bottom: 10px;
-}
-.gn-minimap-toggle {
-  bottom: 10px;
-  right: 10px;
-  z-index: 999;
-}
-.gn-minimap-text {
-  bottom: 87px;
-  color: #fff;
-  right:0;
-  text-transform: uppercase;
-  text-decoration: none;
-  &:active, &:focus {
-    text-decoration: none;
-  }
-}
-.gn-wps-process-form {
-  .panel-body {
-    padding: 0px;
-  }
-}
 // drag/zoom box for on the map
 .ol-dragzoom {
   border: 2px solid #00274e;
