--- a/less/gn_navbar_minimal.less
+++ b/less/gn_navbar_minimal.less
@@ -71,7 +71,7 @@
   [data-gn-language-switcher] {
     select {
       background: transparent;
-      color: #777;
+      color: @gn-menubar-color;
       border: 0;
       cursor: pointer;
       outline: none;
