--- a/less/gn_result_minimal.less
+++ b/less/gn_result_minimal.less
@@ -24,7 +24,10 @@
   .gn-sub-bar {
     padding: 10px;
     .gn-md-actions-btn {
-      margin-right: 0;
+      margin-left: 5px;
+      .md-actions:first-child {
+        margin-right: 2px;
+    }
     }
     .md-actions {
       float: none;
@@ -92,7 +95,7 @@
     padding-top: 32px;
     section {
       margin-bottom: 25px;
-      h4 {
+      h2 {
         font-size: 18px;
         font-weight: 500;
         margin-top: 0;
