--- a/less/gn_results_minimal.less
+++ b/less/gn_results_minimal.less
@@ -253,7 +253,7 @@ ul.gn-resultview {
     }
     .gn-md-abstract {
       cursor: pointer;
-      color: @gray-light;
+      color: @gray;
     }
     .gn-md-abstract.ellipsis:after {
       background: none;
