--- a/less/gn_admin_minimal.less
+++ b/less/gn_admin_minimal.less
@@ -1,41 +1,5 @@
 @import "gn_search_minimal.less";
 @import "../../../style/gn_admin";
 
-ul.gn-resultview li.list-group-item {
-  margin-bottom: 0;
-}
-
-.wfs-indexing-dashboard {
-  .panel-body {
-    margin: 0px;
-    padding: 0.7em;
-  }
-  .panel {
-    margin-top: 1em;
-    margin-bottom: 0;
-  }
-}
-[ng-app="gn_admin"] {
-  .gn-top-bar {
-    .fa {
-      display: inline-block;
-    }
-  }
-  .navbar + .container {
-    padding-top: 15px;
-    .gn-btn-admin {
-      background-color: #fff;
-      border: 1px solid #ddd;
-      color: #333333;
-      margin-top: 0;
-      margin-bottom: 10px;
-      &:hover {
-        background-color: #f8f8f8;
-      }
-      p {
-        font-size: 16px;
-        padding-top: 5px;
-      }
-    }
-  }
-}
+// import default admin styles
+@import "../../default/less/gn_admin_default.less";
