--- a/less/gn_variables_minimal.less
+++ b/less/gn_variables_minimal.less
@@ -5,6 +5,9 @@
 // general
 @gn-spacing: 10px;
 
+// override Bootstrap variables
+@gray-light: #707070;
+
 // body background (image & color)
 // 
 // picture from https://unsplash.com/
@@ -16,7 +19,7 @@
 // menu bar
 @gn-menubar-background: @navbar-default-bg;
 @gn-menubar-background-active: @navbar-default-link-active-bg;
-@gn-menubar-color: @navbar-default-link-color;
+@gn-menubar-color: #454545; // @navbar-default-link-color;
 @gn-menubar-color-hover: @navbar-default-link-hover-color;
 @gn-menubar-border-color: @navbar-default-border;
 @gn-menubar-min-height: 53px;
