--- a/templates/home.html
+++ b/templates/home.html
@@ -9,6 +9,7 @@
                data-ng-model="homeAnyField"
                data-ng-model-options="modelOptions"
                placeholder="{{'anyPlaceHolder' | translate}}"
+               aria-label="{{'anyPlaceHolder' | translate}}"
                data-ng-keyup="$event.keyCode == 13 && goToSearch(homeAnyField)"
                data-typeahead="address for address in getAnySuggestions($viewValue)"
                data-typeahead-loading="anyLoading"
@@ -31,7 +32,7 @@
   </div>
 
   <form class="form-horizontal"
-        role="nav"
+        role="form"
         data-ng-controller="gnsSearchTopEntriesController"
         data-ng-search-form=""
         data-runSearch="true"
@@ -172,9 +173,10 @@
 
           <tabset id="info-tabset pull-left" type="pills" justified="false">
             <tab heading="{{'lastRecords' | translate}}"
+                 role="tab"
                  active="infoTabs.lastRecords.active">
               <form class="form-horizontal"
-                    role="nav"
+                    role="form"
                     data-ng-controller="gnsSearchLatestController"
                     data-ng-search-form=""
                     data-runSearch="true"
@@ -185,15 +187,25 @@
               </form>
             </tab>
             <tab heading="{{'preferredRecords' | translate}}"
+                 role="tab"
                  active="infoTabs.preferredRecords.active">
               <form class="form-horizontal"
-                    role="nav"
+                    role="form"
                     data-ng-controller="gnsSearchPopularController"
                     data-ng-search-form=""
                     data-runSearch="true"
                     data-ng-show="searchResults.records.length > 0">
                   <input type="hidden" name="_csrf" value="{{csrf}}"/>
                 <div data-gn-info-list=""></div>
+              </form>
+            </tab>
+            <tab heading="{{'Comments' | translate}}"
+                 data-ng-if="isUserFeedbackEnabled"
+                 active="infoTabs.commentsalt.active"
+                 role="tab">
+              <form class="form-horizontal">
+                <div class="data-gn-userfeedbacklasthome"
+                    data-nb-of-comments="10"></div>
               </form>
             </tab>
           </tabset>
