--- a/templates/recordView.html
+++ b/templates/recordView.html
@@ -402,180 +402,201 @@
         </div>
 
         <div class="col-md-4 gn-md-side">
-          <section class="gn-md-side-overview" data-ng-if="mdView.current.record.overviews.length > 0">
-            <h4>
-              <i class="fa fa-fw fa-image"></i>
-              <span data-translate="">overview</span>
-            </h4>
-
-            <div data-ng-repeat="img in mdView.current.record.overviews">
-              <img data-gn-img-modal="img"
-                   class="gn-img-thumbnail img-thumbnail"
-                   alt="{{img.label}}"
-                   data-ng-src="{{img.url}}"/>
-
-              <div class="gn-img-thumbnail-caption"
-                   data-ng-show="img.label">{{img.label}}
-              </div>
-            </div>
-          </section>
-
-          <section class="gn-md-side-extent" data-ng-if="mdView.current.record.geoBox.length > 0">
-            <h4>
-              <i class="fa fa-fw fa-map-marker"></i>
-              <span data-translate="">extent</span>
-            </h4>
-            <p data-ng-if="mdView.current.record.geoDesc">
-            <ul>
-              <li data-ng-repeat="d in mdView.current.record.geoDesc">{{d}}</li>
-            </ul>
-            </p>
-            <!-- TODO: use map config -->
-            <p data-ng-repeat="bbox in mdView.current.record.geoBox">
-              <img class="gn-img-thumbnail img-thumbnail gn-img-extent"
-                   data-ng-src="{{gnUrl}}/{{lang}}/region.getmap.png?mapsrs=EPSG:3857&width=250&background=osm&geomsrs=EPSG:4326&geom={{mdView.current.record.getBoxAsPolygon($index)}}"/>
-            </p>
-
-          </section>
-
-          <section class="gn-md-side-dates"
-                   data-ng-if="mdView.current.record.creationDate ||
-                               mdView.current.record.publicationDate ||
-                               mdView.current.record.revisionDate ||
-                               mdView.current.record.tempExtentBegin ||
-                               mdView.current.record.tempExtentEnd">
-            <h4>
-              <i class="fa fa-fw fa-clock-o"></i>
-              <span data-translate="">tempExtent</span>
-            </h4>
-
-            <p>
-            <dl data-ng-show="mdView.current.record.creationDate.length > 0">
-              <dt data-translate>creationDate</dt>
-              <dd data-ng-repeat="creaDate in mdView.current.record.creationDate track by $index"
-                  data-gn-humanize-time="{{creaDate}}"
-                  data-format="YYYY-MM-DD"/>
-            </dl>
-            <dl data-ng-show="mdView.current.record.publicationDate.length > 0">
-              <dt data-translate>publicationDate</dt>
-              <dd data-ng-repeat="pubDate in mdView.current.record.publicationDate track by $index"
-                  data-gn-humanize-time="{{pubDate}}"
-                  data-format="YYYY-MM-DD"/>
-            </dl>
-            <dl data-ng-show="mdView.current.record.revisionDate.length > 0">
-              <dt data-translate>revisionDate</dt>
-              <dd data-ng-repeat="revDate in mdView.current.record.revisionDate track by $index"
-                  data-gn-humanize-time="{{revDate}}"
-                  data-format="YYYY-MM-DD"/>
-            </dl>
-            <dl data-ng-show="mdView.current.record.tempExtentBegin ||
-                                mdView.current.record.tempExtentEnd">
-              <dt data-translate>tempExtentBegin</dt>
-              <dd>
-                <span data-gn-humanize-time="{{mdView.current.record.tempExtentBegin}}"/>
-                &nbsp;<i class="fa fa-fw fa-forward"></i>
-                <span data-gn-humanize-time="{{mdView.current.record.tempExtentEnd}}"/>
-              </dd>
-            </dl>
-            </p>
-          </section>
-
-          <!--<section data-ng-repeat="c in mdView.current.record.getAllContacts().resource track by $index">
-            <h4>
-              <i class="fa fa-fw fa-envelope"></i>
-              <span>{{c.role | translate}}</span>
-            </h4>
-            <div class="gn-contact">
-              <div class="row">
-                <div class="col-md-6">
-                  <address>
-                    <strong title="{{c.address}}">
-                      {{c.org}}<br/>
-                    </strong>
-                    <div data-ng-if="c.email != ''">
-                      <a href="mailto:{{c.email}}">
-                        <span data-ng-hide="c.name">{{c.email}}</span>
-                        <span data-ng-show="c.name">{{c.name}}</span>
-                        <span data-ng-show="c.position">({{c.position}})</span>
-                      </a>
-                    </div>
-                    <div data-ng-if="c.email === ''">{{c.name}}
-                      <span data-ng-show="c.position">({{c.position}})</span>
-                    </div>
-                    <a href="tel:{{c.phone}}"
-                       data-ng-if="c.phone != ''">
-                      <span data-translate="">call</span> {{c.phone}}
-                    </a>
-                  </address>
+            <section class="gn-md-side-overview" data-ng-if="mdView.current.record.overviews.length > 0">
+              <h2>
+                <i class="fa fa-fw fa-image"></i>
+                <span data-translate="">overview</span>
+              </h2>
+    
+              <div data-ng-repeat="img in mdView.current.record.overviews">
+                <img data-gn-img-modal="img"
+                    class="gn-img-thumbnail img-thumbnail"
+                    alt="{{img.label}}"
+                    data-ng-src="{{img.url}}"/>
+    
+                <div class="gn-img-thumbnail-caption"
+                    data-ng-show="img.label">{{img.label}}
                 </div>
               </div>
+            </section>
+            </br>
+    
+            <div data-gn-userfeedback='mdView.current.record'
+                data-gn-user={{user.username}}
+                data-ng-if="isUserFeedbackEnabled">
             </div>
-          </section></br>-->
-
-          <section class="gn-md-side-providedby">
-            <h4>
-              <i class="fa fa-fw fa-cog"></i>
-              <span data-translate="">sourceCatalog</span>
-            </h4>
-            <img ng-src="{{gnUrl}}../images/logos/{{mdView.current.record.source}}.png"
-                 class="gn-source-logo"/>
-          </section>
-
-          <section class="gn-md-side-calendar">
-            <h4>
-              <i class="fa fa-fw fa-calendar"></i>
-              <span data-translate="">updatedOn</span>
-            </h4>
-            <p>
-              <span data-gn-humanize-time="{{mdView.current.record['geonet:info'].changeDate}}"
-                    data-from-now=""></span>
-            </p>
-          </section>
-
-          <section class="gn-md-side-social">
-            <h4>
-              <i class="fa fa-fw fa-share-square-o"></i>
-              <span data-translate="">shareOn</span>
-            </h4>
-            <a data-ng-href="https://twitter.com/share?url={{socialMediaLink | encodeURIComponent}}"
-               title="{{'shareOnTwitter' | translate}}"
-               target="_blank"
-               class="btn btn-default"><i class="fa fa-fw fa-twitter"></i></a>
-            <a
-              data-ng-href="https://plus.google.com/share?url={{socialMediaLink | encodeURIComponent}}"
-              title="{{'shareOnGooglePlus' | translate}}"
-              target="_blank"
-              class="btn btn-default"><i class="fa fa-fw fa-google-plus"></i></a>
-            <a
-              data-ng-href="https://www.facebook.com/sharer.php?u={{socialMediaLink | encodeURIComponent}}"
-              title="{{'shareOnFacebook' | translate}}"
-              target="_blank"
-              class="btn btn-default"><i class="fa fa-fw fa-facebook"></i></a>
-            <a
-              data-ng-href="http://www.linkedin.com/shareArticle?mini=true&amp;summary={{mdView.current.record.title || mdView.current.record.defaultTitle}}&amp;url={{socialMediaLink | encodeURIComponent}}"
-              title="{{'shareOnLinkedIn' | translate}}"
-              target="_blank"
-              class="btn btn-default"><i class="fa fa-fw fa-linkedin"></i></a>
-            <a
-              data-ng-href="mailto:?subject={{mdView.current.record.title || mdView.current.record.defaultTitle}}&amp;body={{socialMediaLink | encodeURIComponent}}"
-              title="{{'shareByEmail' | translate}}"
-              target="_blank"
-              class="btn btn-default"><i class="fa fa-fw fa-envelope-o"></i></a>
-            <a
-              data-ng-click="mdService.getPermalink(md)"
-              title="{{'permalink' | translate}}"
-              class="btn btn-default"><i class="fa fa-fw fa-link"></i></a>
-          </section>
-
-          <section class="gn-md-side-rating">
-            <h4>
-              <i class="fa fa-fw fa-star-half-o"></i>
-              <span data-translate="">rate</span>
-            </h4>
-            <div data-gn-metadata-rate="mdView.current.record"/>
-
-          </section>
-        </div>
+            <div class="gn-md-feedback-buttons clearfix gn-margin-bottom">
+              <div class="pull-left"
+                      data-gn-userfeedbackfull='mdView.current.record'
+                      data-gn-user={{user.username}}
+                      data-ng-if="isUserFeedbackEnabled">
+              </div>
+              <div class="pull-left"
+                      data-gn-userfeedbacknew='mdView.current.record'
+                      data-gn-user={{user.username}}
+                      data-ng-if="isUserFeedbackEnabled">
+              </div>
+    
+            </div>
+            <div data-gn-md-feedback="mdView.current.record"></div>
+    
+            <section class="gn-md-side-extent" data-ng-if="mdView.current.record.geoBox.length > 0">
+              <h2>
+                <i class="fa fa-fw fa-map-marker"></i>
+                <span data-translate="">extent</span>
+              </h2>
+              <p data-ng-if="mdView.current.record.geoDesc">
+              <ul>
+                <li data-ng-repeat="d in mdView.current.record.geoDesc">{{d}}</li>
+              </ul>
+              </p>
+              <!-- TODO: use map config -->
+              <p data-ng-repeat="bbox in mdView.current.record.geoBox">
+                <img class="gn-img-thumbnail img-thumbnail gn-img-extent"
+                    alt="{{'extent' | translate}}"
+                    aria-label="{{'extent' | translate}}"
+                    data-ng-src="{{gnUrl}}/{{lang}}/region.getmap.png?mapsrs=EPSG:3857&width=250&background=settings&geomsrs=EPSG:4326&geom={{mdView.current.record.getBoxAsPolygon($index)}}"/>
+              </p>
+    
+            </section>
+    
+            <section class="gn-md-side-dates"
+                    data-ng-if="mdView.current.record.creationDate ||
+                                mdView.current.record.publicationDate ||
+                                mdView.current.record.revisionDate ||
+                                mdView.current.record.tempExtentBegin ||
+                                mdView.current.record.tempExtentEnd">
+              <h2>
+                <i class="fa fa-fw fa-clock-o"></i>
+                <span data-translate="">tempExtent</span>
+              </h2>
+    
+              <p>
+              <dl data-ng-show="mdView.current.record.creationDate.length > 0">
+                <dt data-translate>creationDate</dt>
+                <dd data-ng-repeat="creaDate in mdView.current.record.creationDate track by $index"
+                    data-gn-humanize-time="{{creaDate}}"
+                    data-format="YYYY-MM-DD"/>
+              </dl>
+              <dl data-ng-show="mdView.current.record.publicationDate.length > 0">
+                <dt data-translate>publicationDate</dt>
+                <dd data-ng-repeat="pubDate in mdView.current.record.publicationDate track by $index"
+                    data-gn-humanize-time="{{pubDate}}"
+                    data-format="YYYY-MM-DD"/>
+              </dl>
+              <dl data-ng-show="mdView.current.record.revisionDate.length > 0">
+                <dt data-translate>revisionDate</dt>
+                <dd data-ng-repeat="revDate in mdView.current.record.revisionDate track by $index"
+                    data-gn-humanize-time="{{revDate}}"
+                    data-format="YYYY-MM-DD"/>
+              </dl>
+              <dl
+                data-ng-show="mdView.current.record.tempExtentBegin ||
+                                  mdView.current.record.tempExtentEnd">
+                <dt data-translate>tempExtentBegin</dt>
+                <dd>
+                  <span data-gn-humanize-time="{{mdView.current.record.tempExtentBegin}}"/>
+                  &nbsp;<i class="fa fa-fw fa-forward"></i>
+                  <span data-gn-humanize-time="{{mdView.current.record.tempExtentEnd}}"/>
+                </dd>
+              </dl>
+              </p>
+            </section>
+    
+            <!--<section data-ng-repeat="c in mdView.current.record.getAllContacts().resource track by $index">
+              <h4>
+                <i class="fa fa-fw fa-envelope"></i>
+                <span>{{c.role | translate}}</span>
+              </h4>
+              <div class="gn-contact">
+                <div class="row">
+                  <div class="col-md-6">
+                    <address>
+                      <strong title="{{c.address}}">
+                        {{c.org}}<br/>
+                      </strong>
+                      <div data-ng-if="c.email != ''">
+                        <a href="mailto:{{c.email}}">
+                          <span data-ng-hide="c.name">{{c.email}}</span>
+                          <span data-ng-show="c.name">{{c.name}}</span>
+                          <span data-ng-show="c.position">({{c.position}})</span>
+                        </a>
+                      </div>
+                      <div data-ng-if="c.email === ''">{{c.name}}
+                        <span data-ng-show="c.position">({{c.position}})</span>
+                      </div>
+                      <a href="tel:{{c.phone}}"
+                        data-ng-if="c.phone != ''">
+                        <span data-translate="">call</span> {{c.phone}}
+                      </a>
+                    </address>
+                  </div>
+                </div>
+              </div>
+            </section></br>-->
+    
+            <section class="gn-md-side-providedby">
+              <h2>
+                <i class="fa fa-fw fa-cog"></i>
+                <span data-translate="">sourceCatalog</span>
+              </h2>
+              <img ng-src="{{gnUrl}}../images/logos/{{mdView.current.record.source}}.png"
+                  aria-label="{{'sourceCatalog' | translate}}"
+                  class="gn-source-logo"/>
+            </section>
+    
+            <section class="gn-md-side-calendar">
+              <h2>
+                <i class="fa fa-fw fa-calendar"></i>
+                <span data-translate="">updatedOn</span>
+              </h2>
+              <p>
+                <span data-gn-humanize-time="{{mdView.current.record['geonet:info'].changeDate}}"
+                      data-from-now=""></span>
+              </p>
+            </section>
+    
+            <section class="gn-md-side-social" data-ng-show="isSocialbarEnabled">
+              <h2>
+                <i class="fa fa-fw fa-share-square-o"></i>
+                <span data-translate="">shareOn</span>
+              </h2>
+              <a data-ng-href="https://twitter.com/share?url={{socialMediaLink | encodeURIComponent}}"
+                title="{{'shareOnTwitter' | translate}}"
+                target="_blank"
+                class="btn btn-default"><i class="fa fa-fw fa-twitter"></i></a>
+              <a
+                data-ng-href="https://www.facebook.com/sharer.php?u={{socialMediaLink | encodeURIComponent}}"
+                title="{{'shareOnFacebook' | translate}}"
+                target="_blank"
+                class="btn btn-default"><i class="fa fa-fw fa-facebook"></i></a>
+              <a
+                data-ng-href="http://www.linkedin.com/shareArticle?mini=true&amp;summary={{mdView.current.record.title || mdView.current.record.defaultTitle}}&amp;url={{socialMediaLink | encodeURIComponent}}"
+                title="{{'shareOnLinkedIn' | translate}}"
+                target="_blank"
+                class="btn btn-default"><i class="fa fa-fw fa-linkedin"></i></a>
+              <a
+                data-ng-href="mailto:?subject={{mdView.current.record.title || mdView.current.record.defaultTitle}}&amp;body={{socialMediaLink | encodeURIComponent}}"
+                title="{{'shareByEmail' | translate}}"
+                target="_blank"
+                class="btn btn-default"><i class="fa fa-fw fa-envelope-o"></i></a>
+              <a
+                data-ng-click="mdService.getPermalink(md)"
+                title="{{'permalink' | translate}}"
+                class="btn btn-default"><i class="fa fa-fw fa-link"></i></a>
+            </section>
+    
+            <section data-ng-show="isRatingEnabled" class="gn-md-side-rating">
+              <h2>
+                <i class="fa fa-fw"></i>
+                <span data-translate="">rate</span>
+              </h2>
+              <div data-gn-metadata-rate="mdView.current.record"/>
+            </section>
+    
+            <div data-ng-show="isRecordHistoryEnabled && user.isEditorOrMore()"
+                 data-gn-record-history="mdView.current.record"></div>
+          </div>
 
       </div>
     </div>
