--- a/templates/searchForm.html
+++ b/templates/searchForm.html
@@ -1,6 +1,6 @@
 <form class="form-horizontal"
       role="form">
-              <input type="hidden" name="_csrf" value="{{csrf}}"/>
+  <input type="hidden" name="_csrf" value="{{csrf}}"/>
   <!--ANY full text search input-->
   <div class="row gn-top-search">
     <div class="col-md-8 col-md-offset-2">
@@ -10,6 +10,7 @@
                id="gn-any-field"
                autocomplete="off"
                data-ng-model="searchObj.params.any"
+               aria-label="{{'anyPlaceHolder' | translate}}"
                placeholder="{{'anyPlaceHolder' | translate}}"
                data-ng-keyup="$event.keyCode == 13 && triggerSearch()"
                data-typeahead="address for address in getAnySuggestions($viewValue)"
@@ -23,12 +24,14 @@
                   data-ng-click="triggerSearch()"
                   class="btn btn-default btn-lg btn-search">
             <i class="fa fa-search"></i>
+            <span class="sr-only" data-translate="">search</span>
           </button>
           <button type="button"
                   data-ng-click="resetSearch(searchObj.defaultParams);"
                   title="{{'ClearTitle' | translate}}"
                   class="btn btn-default btn-lg btn-reset">
             <i class="fa fa-times"></i>
+            <span class="sr-only" data-translate="">ClearTitle</span>
           </button>
           <button type="button"
                   class="btn btn-default btn-lg btn-advanced"
@@ -36,7 +39,6 @@
                   btn-checkbox=""
                   btn-checkbox-true="1"
                   btn-checkbox-false="0">
-            <!-- <i class="fa fa-ellipsis-v"></i> -->
             <span data-translate="">advanced</span>
           </button>
           
