--- a/templates/home.html
+++ b/templates/home.html
@@ -57,81 +57,42 @@
     </div>
   </div>
 
-  <div class="gn-row-topics" data-ng-show="searchInfo.count > 0">
-    <div data-ng-class="fluidLayout ? 'container-fluid' : 'container'">
-      <div class="row">
+  <div class="gn-row-topics-info">
+    <div class="gn-row-topics" data-ng-show="searchInfo.count > 0">
+      <div data-ng-class="fluidLayout ? 'container-fluid' : 'container'">
+        <div class="row">
 
-        <div class="col-sm-12 col-md-9" data-ng-show="browse !== ''">
-          <h4>
-            <span data-translate="">browseBy</span>
-            <span
-              data-ng-show="searchInfo.facet['inspireThemes'].length > 0 && searchInfo.facet['topicCats'].length > 0">
-              <label data-ng-show="searchInfo.facet['inspireThemes'].length > 0">
-                <input type="radio" name="browse" value="inspire" data-ng-model="browse"/>
-                <span data-translate="">inspireThemes</span>
-              </label>
-              <label data-ng-show="searchInfo.facet['topicCats'].length > 0">
-                <input type="radio" name="browse" value="topics" data-ng-model="browse"/>
-                <span data-translate="">topics</span>
-              </label>
-            </span>
-            <label
-              data-ng-show="searchInfo.facet['inspireThemes'].length > 0 && searchInfo.facet['topicCats'].length == 0"><span
-              data-translate="">inspireThemes</span></label>
-            <label
-              data-ng-show="searchInfo.facet['topicCats'].length > 0 && searchInfo.facet['inspireThemes'].length == 0"><span
-              data-translate="">topics</span></label>
-          </h4>
+          <div class="col-sm-12 col-md-9" data-ng-show="browse !== ''">
+            <h4>
+              <span data-translate="">browseBy</span>
+              <span
+                data-ng-show="searchInfo.facet['inspireThemes'].length > 0 && searchInfo.facet['topicCats'].length > 0">
+                <label data-ng-show="searchInfo.facet['inspireThemes'].length > 0">
+                  <input type="radio" name="browse" value="inspire" data-ng-model="browse"/>
+                  <span data-translate="">inspireThemes</span>
+                </label>
+                <label data-ng-show="searchInfo.facet['topicCats'].length > 0">
+                  <input type="radio" name="browse" value="topics" data-ng-model="browse"/>
+                  <span data-translate="">topics</span>
+                </label>
+              </span>
+              <label
+                data-ng-show="searchInfo.facet['inspireThemes'].length > 0 && searchInfo.facet['topicCats'].length == 0"><span
+                data-translate="">inspireThemes</span></label>
+              <label
+                data-ng-show="searchInfo.facet['topicCats'].length > 0 && searchInfo.facet['inspireThemes'].length == 0"><span
+                data-translate="">topics</span></label>
+            </h4>
 
-          <div class="row">
-            <span data-ng-repeat="(key, facet) in searchInfo.facet['topicCats']"
-                  data-ng-show="browse === 'topics'"
-                  class="col-xs-12 col-sm-6 col-md-4">
-              <div class="badge-result badge-result-topic clearfix">
-                <a class="pull-left clearfix"
-                   title="{{facet['@label']}}"
-                   data-ng-href="#/search?facet.q=topicCat%2F{{facet['@name']}}">
-                  <span class="badge-icon badge-result-topic pull-left">
-                    <i class="fa fa-2x fa-table gn-icon gn-icon-{{facet['@name']}}"></i>
-                  </span>
-                  <span class="badge-text pull-left">
-                    <span class="gn-icon-label">{{facet['@label']}}</span>
-                  </span>
-                </a>
-                <span class="pull-left">({{facet['@count']}})</span>
-              </div>
-            </span>
-            <span data-ng-repeat="(key, facet) in searchInfo.facet['inspireThemesURI'] track by $index"
-                  data-ng-show="browse === 'inspire'"
-                  class="col-xs-12 col-sm-6 col-md-4">
-              <div class="badge-result badge-result-inspire clearfix">
-                <a class="pull-left clearfix bg-iti-{{facet['@name'].slice(facet['@name'].lastIndexOf('/')+1)}}"
-                   title="{{facet['@label']}}"
-                   data-ng-href="#/search?facet.q=inspireThemeURI%2F{{facet['@name'] | encodeURIComponent | encodeURIComponent}}">
-                  <span class="badge-icon pull-left">
-                     <i class="fa fa-2x gn-icon iti-{{facet['@name'].slice(facet['@name'].lastIndexOf('/')+1)}}"></i>
-                  </span>
-                  <span class="badge-text pull-left">
-                    <span class="gn-icon-label">{{facet['@label']}}</span>
-                  </span>
-                </a>
-                <span class="pull-left">({{facet['@count']}})</span>
-              </div>
-            </span>
-          </div>
-        </div>
-        <div class="col-sm-12 col-md-3" data-ng-show="searchInfo.facet['types'].length > 0">
-          <h4>
-            <span data-translate="">browseTypes</span>
-          </h4>
-          <div class="row">
-              <span data-ng-show="facet['@label']"
-                    class="col-xs-12 col-sm-6 col-md-12">
-                <div class="badge-result badge-result-type pull-left">
-                  <a title="{{facet['@label']}}"
-                     class="pull-left clearfix"
-                     data-ng-href="#/search?facet.q=type%2F{{facet['@name']}}">
-                    <span class="badge-icon pull-left">
+            <div class="row">
+              <span data-ng-repeat="(key, facet) in searchInfo.facet['topicCats']"
+                    data-ng-show="browse === 'topics'"
+                    class="col-xs-12 col-sm-6 col-md-4">
+                <div class="badge-result badge-result-topic clearfix">
+                  <a class="pull-left clearfix"
+                    title="{{facet['@label']}}"
+                    data-ng-href="#/search?facet.q=topicCat%2F{{facet['@name']}}">
+                    <span class="badge-icon badge-result-topic pull-left">
                       <i class="fa fa-2x fa-table gn-icon gn-icon-{{facet['@name']}}"></i>
                     </span>
                     <span class="badge-text pull-left">
@@ -141,78 +102,118 @@
                   <span class="pull-left">({{facet['@count']}})</span>
                 </div>
               </span>
+              <span data-ng-repeat="(key, facet) in searchInfo.facet['inspireThemesURI'] track by $index"
+                    data-ng-show="browse === 'inspire'"
+                    class="col-xs-12 col-sm-6 col-md-4">
+                <div class="badge-result badge-result-inspire clearfix">
+                  <a class="pull-left clearfix bg-iti-{{facet['@name'].slice(facet['@name'].lastIndexOf('/')+1)}}"
+                    title="{{facet['@label']}}"
+                    data-ng-href="#/search?facet.q=inspireThemeURI%2F{{facet['@name'] | encodeURIComponent | encodeURIComponent}}">
+                    <span class="badge-icon pull-left">
+                      <i class="fa fa-2x gn-icon iti-{{facet['@name'].slice(facet['@name'].lastIndexOf('/')+1)}}"></i>
+                    </span>
+                    <span class="badge-text pull-left">
+                      <span class="gn-icon-label">{{facet['@label']}}</span>
+                    </span>
+                  </a>
+                  <span class="pull-left">({{facet['@count']}})</span>
+                </div>
+              </span>
+            </div>
+          </div>
+          <div class="col-sm-12 col-md-3" data-ng-show="searchInfo.facet['types'].length > 0">
+            <h4>
+              <span data-translate="">browseTypes</span>
+            </h4>
+            <div class="row">
+                <span data-ng-show="facet['@label']"
+                      class="col-xs-12 col-sm-6 col-md-12">
+                  <div class="badge-result badge-result-type pull-left">
+                    <a title="{{facet['@label']}}"
+                      class="pull-left clearfix"
+                      data-ng-href="#/search?facet.q=type%2F{{facet['@name']}}">
+                      <span class="badge-icon pull-left">
+                        <i class="fa fa-2x fa-table gn-icon gn-icon-{{facet['@name']}}"></i>
+                      </span>
+                      <span class="badge-text pull-left">
+                        <span class="gn-icon-label">{{facet['@label']}}</span>
+                      </span>
+                    </a>
+                    <span class="pull-left">({{facet['@count']}})</span>
+                  </div>
+                </span>
+            </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-  
-  <div class="row gn-row-info gn-info-list-blocks" data-ng-show="searchInfo.count > 0">
-    <div data-ng-class="fluidLayout ? 'container-fluid' : 'container'">
-      <div class="row">
-        <div class="col-sm-12">
+    
+    <div class="row gn-row-info gn-info-list-blocks" data-ng-show="searchInfo.count > 0">
+      <div data-ng-class="fluidLayout ? 'container-fluid' : 'container'">
+        <div class="row">
+          <div class="col-sm-12">
 
-          <!-- toggle buttons -->
-          <div class="btn-group pull-right" data-toggle="buttons">
-            <button id="btn-toggle-blocks" type="button" class="btn btn-default active"
-                    data-ng-click="toggleListType('blocks')"
-                    aria-label="Switch to Blocked list">
-              <i class="fa fa-th-large" aria-hidden="true"></i>
-            </button>
-            <button id="btn-toggle-large" type="button" class="btn btn-default"
-                    data-ng-click="toggleListType('large')"
-                    aria-label="Switch to Large list">
-              <i class="fa fa-bars" aria-hidden="true"></i>
-            </button>
-            <button id="btn-toggle-small" type="button" class="btn btn-default"
-                    data-ng-click="toggleListType('small')"
-                    aria-label="Switch to Small list">
-              <i class="fa fa-align-justify" aria-hidden="true"></i>
-            </button>
+            <!-- toggle buttons -->
+            <div class="btn-group pull-right" data-toggle="buttons">
+              <button id="btn-toggle-blocks" type="button" class="btn btn-default active"
+                      data-ng-click="toggleListType('blocks')"
+                      aria-label="Switch to Blocked list">
+                <i class="fa fa-th-large" aria-hidden="true"></i>
+              </button>
+              <button id="btn-toggle-large" type="button" class="btn btn-default"
+                      data-ng-click="toggleListType('large')"
+                      aria-label="Switch to Large list">
+                <i class="fa fa-bars" aria-hidden="true"></i>
+              </button>
+              <button id="btn-toggle-small" type="button" class="btn btn-default"
+                      data-ng-click="toggleListType('small')"
+                      aria-label="Switch to Small list">
+                <i class="fa fa-align-justify" aria-hidden="true"></i>
+              </button>
+            </div>
+
+            <tabset id="info-tabset pull-left" type="pills" justified="false">
+              <tab heading="{{'lastRecords' | translate}}"
+                  role="tab"
+                  active="infoTabs.lastRecords.active">
+                <form class="form-horizontal"
+                      role="form"
+                      data-ng-controller="gnsSearchLatestController"
+                      data-ng-search-form=""
+                      data-runSearch="true"
+                      data-ng-show="searchResults.records.length > 0">
+                    <input type="hidden" name="_csrf" value="{{csrf}}"/>
+
+                  <div data-gn-info-list=""></div>
+                </form>
+              </tab>
+              <tab heading="{{'preferredRecords' | translate}}"
+                  role="tab"
+                  active="infoTabs.preferredRecords.active">
+                <form class="form-horizontal"
+                      role="form"
+                      data-ng-controller="gnsSearchPopularController"
+                      data-ng-search-form=""
+                      data-runSearch="true"
+                      data-ng-show="searchResults.records.length > 0">
+                    <input type="hidden" name="_csrf" value="{{csrf}}"/>
+                  <div data-gn-info-list=""></div>
+                </form>
+              </tab>
+              <tab heading="{{'Comments' | translate}}"
+                  data-ng-if="isUserFeedbackEnabled"
+                  active="infoTabs.commentsalt.active"
+                  role="tab">
+                <form class="form-horizontal">
+                  <div class="data-gn-userfeedbacklasthome"
+                      data-nb-of-comments="10"></div>
+                </form>
+              </tab>
+            </tabset>
           </div>
-
-          <tabset id="info-tabset pull-left" type="pills" justified="false">
-            <tab heading="{{'lastRecords' | translate}}"
-                 role="tab"
-                 active="infoTabs.lastRecords.active">
-              <form class="form-horizontal"
-                    role="form"
-                    data-ng-controller="gnsSearchLatestController"
-                    data-ng-search-form=""
-                    data-runSearch="true"
-                    data-ng-show="searchResults.records.length > 0">
-                  <input type="hidden" name="_csrf" value="{{csrf}}"/>
-
-                <div data-gn-info-list=""></div>
-              </form>
-            </tab>
-            <tab heading="{{'preferredRecords' | translate}}"
-                 role="tab"
-                 active="infoTabs.preferredRecords.active">
-              <form class="form-horizontal"
-                    role="form"
-                    data-ng-controller="gnsSearchPopularController"
-                    data-ng-search-form=""
-                    data-runSearch="true"
-                    data-ng-show="searchResults.records.length > 0">
-                  <input type="hidden" name="_csrf" value="{{csrf}}"/>
-                <div data-gn-info-list=""></div>
-              </form>
-            </tab>
-            <tab heading="{{'Comments' | translate}}"
-                 data-ng-if="isUserFeedbackEnabled"
-                 active="infoTabs.commentsalt.active"
-                 role="tab">
-              <form class="form-horizontal">
-                <div class="data-gn-userfeedbacklasthome"
-                    data-nb-of-comments="10"></div>
-              </form>
-            </tab>
-          </tabset>
         </div>
       </div>
     </div>
+    <!-- /.gn-row-info -->
   </div>
-  <!-- /.gn-row-info -->
-
 </div>
