--- a/less/gn_login_minimal.less
+++ b/less/gn_login_minimal.less
@@ -1,4 +1,6 @@
 @import "../../../style/gn_login";
 @import "gn_view_minimal.less";
+// import default login styles
+@import "../../default/less/gn_login_default.less";
 // variables for manipulating the theme
 @import "gn_variables_minimal.less"; // must be last
